@@ -1,5 +1,5 @@
 AUX trimines-1.3.0-gentoo.patch 2619 SHA256 1a946cef939015edc58d64fa2e1792d515dff66ad4e6b7948efffa3f7952ebcf SHA512 3e3efe4e70b02b279da37e7e648bca0b482ebee7709eca2b252193a7fc5b029d8bf48fafcfe7a8498a1b9dcfbd24eabed64543d51dfddcf16d055b392d835ace WHIRLPOOL 58e17839c5b11462f6fb1bb3e19b56ddcd9f4810598bce0037e45f133e57fcebcee38a4ef2b91f3824620e173ef37a282c0a608461b619c8fd0f0ef4b3611344
 DIST trimines-1.3.0.tar.gz 78590 SHA256 87e6d48b474cf8097c0fac83f700fc098f8f4e65240ceaf0da81b5e644f7d65a SHA512 9a9c5e741460eff29a024aab85ee00d7ccc6111460dab50a8036c638afb9185fb6ffa728914bda7963a80b9b70c7a5f4a1125e08ddf4d90e220d9cfe6683548e WHIRLPOOL 9a5f6f59e957fd829fa4c9058d00d29f1d5549694e7734f49f56b4ccfaf144c3bae824d0bb378251ebd5004fcbb3fd510d83492d326bbdabc38b17b2e3063584
-EBUILD trimines-1.3.0.ebuild 886 SHA256 d58f9393bc14d79f4c21f20c4ebd468af7bac3fd7678299b152eb014d7cbea06 SHA512 d00655e62b5597d59456a5f26acaa4856c10a34152a96be95e3445aeadb5215ffd4110c6c3dce92e25c1e4e8b2d3ae7e1bc70113ccac6d03973b66e367a31d12 WHIRLPOOL bc5250c68695235cafb4a3f88e2da1a44dcf19772f9313dd524afc47e6fdb6d5caaf860b053bf66d65d5f265549b21a39948790c82f5bad85ae3e59dfd1917bf
-MISC ChangeLog 1397 SHA256 47b0d6613e5c50d2900ccaf243de26de610903cc9a863dee354c1a06eb4f27d4 SHA512 8ced6d76f6e30d25e84eb2cc55a7f579d189721d805dbed7fc1a581cdf1b8ff30eaf02d93086d584a46c625bf76adf613a2d60bd69db5d78e103efdef6631034 WHIRLPOOL 91445e46a8334f67849e0bc53387a4772ed613595901bec72e11839424b664cfd53662c90d2ffd1dce3b7100abc045ef94fbb5118f40a07a4eb0e76828e76207
+EBUILD trimines-1.3.0.ebuild 844 SHA256 b462b9351917809dbf2c55ca25872d185cca9677e75d8d64affeb5aed834196c SHA512 89cab5c7f0e8e436b30663dc3c48214d0790f67360504fb7985d0f9424b3c0eade2c47ed121d92d9bcb20aa461802853c012c63117379fc50af1f1f787c191dd WHIRLPOOL f4351d8be06fd422c1fea1a1370b6a8705e923fed43a40c5242d7523656e4145addd0ad3619895b7a26bce5f37e9ed48f6d5cbbdc6856407c0bd1ba93754a3c1
+MISC ChangeLog 1601 SHA256 60c51c267c1994271842b01803aab0d0aa98b02d94f39fb73b4c7cefc631399c SHA512 945829afcc0c3d0b01e4cafa1c1d084a174467249a0c9be9aec9a3bb14f5186acd1793a9c165752c5832c2284c5e6d4de5d925b408c15783f0b8839201867f64 WHIRLPOOL 5ef3f3355a3bdba1ad2402a80b352923d7bd27dc929ce086cc80d1676078bdcceb009c88d1c7522f711837e662df4b899c5f2ec7f1f526b829665fe51d995840
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
