@@ -6,8 +6,7 @@ HOMEPAGE=http://www.freewebs.com/trimines/
 KEYWORDS=~amd64 ~ppc x86
 LICENSE=all-rights-reserved
 RDEPEND=media-libs/libsdl[video] games-misc/games-envd
-RESTRICT=mirror bindist
 SLOT=0
-SRC_URI=http://www.freewebs.com/trimines/trimines-1.3.0.tar.gz
+SRC_URI=mirror://gentoo/trimines-1.3.0.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	bc8839608d26ccd57ca4f2f01c67460f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=69b5a460b1fb63aae856050342e421e8
+_md5_=54e8b6a2c01a0492241493ac9139b9cd
