@@ -1,6 +1,12 @@
 # ChangeLog for games-puzzle/trimines
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/trimines/ChangeLog,v 1.9 2015/02/11 06:35:24 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/trimines/ChangeLog,v 1.11 2015/02/11 07:14:24 mr_bones_ Exp $
+
+  11 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> trimines-1.3.0.ebuild:
+  allow mirroring
+
+  11 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> trimines-1.3.0.ebuild:
+  use the mirrors to fetch
 
   11 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> trimines-1.3.0.ebuild:
   EAPI=5
